--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,15 +30,20 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile 'com.roughike:bottom-bar:1.3.9'
+    compile 'io.reactivex:rxjava:1.0.10'
 
-    //BUtterknife
+    //Butterknife
     compile 'com.jakewharton:butterknife:8.2.1'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
-
+    //Bmob
     compile 'cn.bmob.android:bmob-sdk:3.5.5'
     compile 'cn.bmob.android:bmob-push:0.8'
     compile 'cn.bmob.android:bmob-im:2.0.5@aar'
     compile 'cn.bmob.android:http-legacy:1.0'
+
+    //Fragmentation
+    compile 'me.yokeyword:fragmentation:1.0.0'
+    compile 'me.yokeyword:fragmentation-swipeback:1.0.0'
 
     testCompile 'junit:junit:4.12'
 }
