--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.0"
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.example.android.hxpress"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -26,10 +26,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:appcompat-v7:25.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
-    compile 'com.roughike:bottom-bar:1.3.9'
     compile 'io.reactivex:rxjava:1.0.10'
 
     //Butterknife
@@ -40,6 +39,10 @@ dependencies {
     compile 'cn.bmob.android:bmob-push:0.8'
     compile 'cn.bmob.android:bmob-im:2.0.5@aar'
     compile 'cn.bmob.android:http-legacy:1.0'
+
+    compile 'com.android.support:design:25.0.0'
+
+    compile 'org.greenrobot:eventbus:3.0.0'
 
     //Fragmentation
     compile 'me.yokeyword:fragmentation:1.0.0'
